# pihelper-c

./: .gitignore  .gitmodules  .vimrc  CMakeLists.txt  Cargo.toml  LICENSE  README.md
PiHelper/: CMakeLists.txt  cli.c  cli.h  config.c  config.h  log.c  log.h  network.c  network.h  pihelper.c  pihelper.h
doc/: CMakeLists.txt  pihelper.1
scripts/: build-android  build-ios
src/: CMakeLists.txt  config.c  config.h  log.c  main.rs  network.c  pihelper.c  pihelper.h
